# dogs

./: .gitignore  Makefile  pyproject.toml
dogs/: __init__.py  eq.py  function.py  option.py
dogs/classes/: apply.py  chain.py  eq.py  from_io.py  functor.py  monad_io.py  pointed.py
dogs/core/: either.py  function.py  io.py  option.py  reader.py  task.py
dogs/core/classes/: applicative.py  apply.py  chain.py  eq.py  functor.py  monad.py  pointed.py
dogs/data/: array.py  either.py  io.py  io_model.py  io_ref.py  option.py  reader.py  reader_io.py  reader_task.py  task.py  task_t.py  unit.py
dogs/function/: __init__.py  flow.py  function.py  pipe.py  pipe_operator.py  types.py
dogs/hkt/: __init__.py  kind.py
dogs/mypy_plugin/: plugin.py
tests/: test_dogs.py  test_function.py
tests/core/: function.py  test_option.py
tests/data/: test_array.py  test_either.py  test_io_ref.py  test_option.py  test_reader.py  test_reader_io.py  test_reader_task.py  test_task.py
