[tool.poetry]
name = "dogs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.961"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
black = "^22.3.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "dogs.mypy_plugin.plugin"
