[tool.poetry]
name = "dogs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.961"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
black = "^22.3.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = [
    "C0114", # missing-module-docstring
    "R0903", # too-few-public-methods
    "C0103", # invalid-name
    "W0108"  # unnecessary-lambda
]
